--- a/index.html
+++ b/index.html
@@ -18,35 +18,135 @@
 
     <section  class="section">
         <br>
-        <div class="cardsContainer">
-            <div class="cardA"></div>
-            <div class="cardB"></div>
-            <div class="cardA"></div>
-            <div class="cardB"></div>
-            <div class="cardB"></div>
-            <div class="cardA"></div>
-            <div class="cardB"></div>
-            <div class="cardA"></div>
-            <div class="cardA"></div>
-            <div class="cardB"></div>
-            <div class="cardA"></div>
-            <div class="cardB"></div>
-            <div class="cardB"></div>
-            <div class="cardA"></div>
-            <div class="cardB"></div>
-            <div class="cardA"></div>
-        </div>
+            <div class="cardsContainer">
+
+                <div class="card" data-value="A">
+                    <div class="card-inner">
+                    <div class="card-front">A</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="A">
+                    <div class="card-inner">
+                    <div class="card-front">A</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="B">
+                    <div class="card-inner">
+                    <div class="card-front">B</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="B">
+                    <div class="card-inner">
+                    <div class="card-front">B</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="C">
+                    <div class="card-inner">
+                    <div class="card-front">C</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="C">
+                    <div class="card-inner">
+                    <div class="card-front">C</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="D">
+                    <div class="card-inner">
+                    <div class="card-front">D</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="D">
+                    <div class="card-inner">
+                    <div class="card-front">D</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="A">
+                    <div class="card-inner">
+                    <div class="card-front">A</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="A">
+                    <div class="card-inner">
+                    <div class="card-front">A</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="B">
+                    <div class="card-inner">
+                    <div class="card-front">B</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="B">
+                    <div class="card-inner">
+                    <div class="card-front">B</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="C">
+                    <div class="card-inner">
+                    <div class="card-front">C</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="C">
+                    <div class="card-inner">
+                    <div class="card-front">C</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="D">
+                    <div class="card-inner">
+                    <div class="card-front">D</div>
+                    <div class="cardAback"></div>
+                    </div>
+                </div>
+
+                <div class="card" data-value="D">
+                    <div class="card-inner">
+                    <div class="card-front">D</div>
+                    <div class="cardBback"></div>
+                    </div>
+                </div>
+
+            </div>
+
         <br>
     </section>
 
     <footer class="footer">
         <div class="divfooter">
             <p class="p">PUNTOS: </p>
-            <p class="p">TIEMPO: </p>
+            <p class="p">TIEMPO: <span id="time">0</span></p>
             <p class="p">INTENTOS: </p>
             <button class="button">VOLVER A BARAJAR</button>
         </div>
     </footer>
+
+    <script src="app.js"></script>
 
 </body>
 
